# backend-learning-fastapi

./: .gitignore  books.py  books2.py  pyproject.toml
todo/: database.py  main.py  models.py
todo/alembic/versions/: df8a3f5fc90e_create_phone_number_for_user_column.py
todo/routers/: admin.py  auth.py  todos.py  users.py
todo/static/js/: base.js
todo/templates/: home.html  todo.html
todo/test/: test_admin.py  test_auth.py  test_example.py  test_main.py  test_todos.py  test_users.py  utils.py
